--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+*****
+
+VERSION 2 of SemanticJournal replaces this project: http://github.com/swirrl/semjo
+
+*****
+
+
 Contents of this README file
 ============================
 
